securitygroups.tf

resource "aws_security_group" "ec2_sg" {
  name        = "allow_http_SSH"
  description = "allow HTTP and SSH inb traffic"
  vpc_id      = "vpc-0bb955ba49115e69b"

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SIT EC2 Security group"
  }
}
